samples/_failures_safe/1761689654_034753_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_103e50a0.c: In function ‘main’:
./samples/SAFE/__tmp_103e50a0.c:201:5: error: expected declaration or statement at end of input
  201 |     if (len > 0 && input_buffer[len - 1] == '\n') {
      |     ^~
./samples/SAFE/__tmp_103e50a0.c:201:5: error: expected declaration or statement at end of input
